frontend-service/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  labels:
    app: abhi
spec:
  selector:
    app: abhi
  type: NodePort
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30001
